--- a/china/index.html
+++ b/china/index.html
@@ -76,6 +76,7 @@
   <script src="jsmaps/jsmaps-panzoom.js"></script>
   <script src="jsmaps/jsmaps.min.js" type="text/javascript"></script>
   <script src="maps/china.js" type="text/javascript"></script>
+  <script src="data/frequencyMapper.js" type="text/javascript"></script>
   <!-- End Map scripts -->
 
 </head>
