--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 
   <!-- Map scripts - add the below to your page -->
   <!-- jsmaps-panzoom.js is optional if you are using enablePanZoom -->
-  <link href="jsmaps/jsmaps.css" rel="stylesheet" type="text/css" />
-  <script src="jsmaps/jsmaps-libs.js" type="text/javascript"></script>
-  <script src="jsmaps/jsmaps-panzoom.js"></script>
-  <script src="jsmaps/jsmaps.min.js" type="text/javascript"></script>
-  <script src="maps/china.js" type="text/javascript"></script>
-  <script src="utils/HSLColorGenerator.js" type="text/javascript"></script>
-  <script src="data/frequecy.js" type="text/javascript"></script>
-  <script src="data/frequencyMapper.js" type="text/javascript"></script>
+  <link href="china/jsmaps/jsmaps.css" rel="stylesheet" type="text/css" />
+  <script src="china/jsmaps/jsmaps-libs.js" type="text/javascript"></script>
+  <script src="china/jsmaps/jsmaps-panzoom.js"></script>
+  <script src="china/jsmaps/jsmaps.min.js" type="text/javascript"></script>
+  <script src="china/maps/china.js" type="text/javascript"></script>
+  <script src="china/utils/HSLColorGenerator.js" type="text/javascript"></script>
+  <script src="china/data/frequecy.js" type="text/javascript"></script>
+  <script src="china/data/frequencyMapper.js" type="text/javascript"></script>
   <!-- End Map scripts -->
 
 </head>
