--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
   <script src="china/jsmaps/jsmaps.min.js" type="text/javascript"></script>
   <script src="china/maps/china.js" type="text/javascript"></script>
   <script src="china/utils/HSLColorGenerator.js" type="text/javascript"></script>
-  <script src="china/data/frequecy.js" type="text/javascript"></script>
+  <script src="china/data/frequency.js" type="text/javascript"></script>
+  <script src="china/data/ccserFrequency.js" type="text/javascript"></script>
   <script src="china/data/frequencyMapper.js" type="text/javascript"></script>
   <!-- End Map scripts -->
 
